created solution and installed material 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,13 @@
   {{title}}
 </h1>
 <router-outlet></router-outlet>
+
+<button md-button >Click me!</button>
+
+<md-list>
+  <md-list-item>h11</md-list-item>
+  <md-list-item>h12</md-list-item>
+  <md-list-item>h13</md-list-item>
+  <md-list-item>h14</md-list-item>
+  <md-list-item>h15</md-list-item>
+</md-list>
