--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,13 @@
-<p>
-  home works!
-</p>
+<md-radio-group [(ngModel)]="isNewUser">
+  <md-radio-button [value]="true">New User</md-radio-button>
+  <md-radio-button [value]="false">Existing User </md-radio-button>
+</md-radio-group>
+<p>{{isNewUser}}</p>
+<div *ngIf="isNewUser">
+  <md-input-container>
+    <input mdInput placeholder="Insert a user Id" />
+  </md-input-container>
+  <button md-button>Create new user</button>
+
+
+</div>
