added localStorage reactiveness

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,3 +25,11 @@
 <button md-button (click)="login()">Login</button>
 <button md-button (click)="test()">Test</button>
 <button md-button (click)="logout()">Logout</button>
+
+{{currentUser?.userName}}
+
+<p>
+  {{testString}}
+  </p>
+
+  <p>hello {{secondKey2}}</p>
